XYStage role added and core properties updated
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@17 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/bin/MMConfig_demo.cfg
+++ b/bin/MMConfig_demo.cfg
@@ -11,7 +11,7 @@ Device,Excitation,DemoCamera,DWheel
 Device,Objective,DemoCamera,DObjective
 Device,Z,DemoCamera,DStage
 Device,Path,DemoCamera,DLightPath
-Device,XYStage,DemoCamera,DXYStage
+Device,XY,DemoCamera,DXYStage
 
 # Pre-init settings for devices
 
@@ -25,6 +25,7 @@ Property,Core,Initialize,1
 # Roles
 Property,Core,Camera,Camera
 Property,Core,Focus,Z
+Property,Core,XYStage,XY
 Property,Core,AutoShutter,1
 
 # Camera-synchronized devices
