Removed vc8 project files refs in Makefiles
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@30 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_MMCore/Makefile.am
+++ b/Test_MMCore/Makefile.am
@@ -11,7 +11,7 @@ testCore_SOURCES = Test_MMCore_Mac.cpp \
    $(top_srcdir)/MMCore/MMCore.cpp \
    $(top_srcdir)/MMCore/PluginManager.cpp
 
-EXTRA_DIST = Test_MMCore.vcproj Test_MMCore_vc8.vcproj Test_MMCore.sln Test_MMCore_vc8.sln  Test_MMCore.cpp
+EXTRA_DIST = Test_MMCore.vcproj Test_MMCore.sln Test_MMCore.cpp
 
 install:
 	cp testCore $(IJPATH)/testCore
