--- a/mmstudio/.classpath
+++ b/mmstudio/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/Program Files/ImageJ/ij.jar" sourcepath="C:/projects/3rdparty/ImageJ-source/ij137v-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="C:/projects/3rdparty/BeanShell/bsh-2.0b4.jar"/>
 	<classpathentry kind="lib" path="C:/projects/micromanager2/bin/MMCoreJ.jar"/>
+	<classpathentry kind="lib" path="C:/projects/micromanager2/classext/syntax.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
