--- a/plugins/Tracker/build.xml
+++ b/plugins/Tracker/build.xml
@@ -37,7 +37,7 @@
 
 	<target name="compileMMTracking" description="Compile Tracking plugin.">
 		<mkdir dir="build" />
-		<javac srcdir="./src" destdir="./build" optimize="on" source="5" debug="off">
+		<javac srcdir="./src" destdir="./build" optimize="on" source="1.5" target="1.5" debug="on">
 			<classpath refid="project.class.path" />
 		</javac>
 	</target>
