--- a/classext/Makefile.am
+++ b/classext/Makefile.am
@@ -4,4 +4,5 @@ install:
 	cp ij.jar $(DESTDIR)$(IJPATH)
 	cp swingx-0.9.5.jar $(DESTDIR)$(IJPATH)/plugins/
 	cp bsh-2.0b4.jar $(DESTDIR)$(IJPATH)/plugins/
-
+	cp swing-layout-1.0.4.jar $(DESTDIR)$(IJPATH)/plugins/
+	cp commons-math-2.0.jar $(DESTDIR)$(IJPATH)/plugins/
