--- a/mmstudio/build.xml
+++ b/mmstudio/build.xml
@@ -20,6 +20,8 @@
 	<property name="IJ" value="../classext/ij.jar"/>
 	<property name="beanshell" value="../classext/bsh-2.0b4.jar"/>
 	<property name="swingx" value="../classext/swingx-0.9.5.jar"/>
+	<property name="swing_layout" value="../swing-layout-1.0.4.jar"/>
+	<property name="commons_math" value="../commons-math-2.0.jar"/>
 	<property name="MMCoreJ" value="../bin/MMCoreJ.jar"/>
 	<property name="MMPluginDir-inst" value="${InstallRoot}/plugins/Micro-Manager"/>
 	<property name="BinRoot" value="../bin"/>
@@ -33,6 +35,8 @@
 		<pathelement location="${MMPluginDir}/MMCoreJ.jar"/>
 		<pathelement location="${MMPluginDir}/bsh-2.0b4.jar"/>
 		<pathelement location="${MMPluginDir}/swingx-0.9.5.jar"/>
+		<pathelement location="${MMPluginDir}/swing-layout-1.0.4.jar"/>
+    	<pathelement location="${MMPluginDir}/commons-math-2.0.jar"/>
 		<pathelement location="${IJ}"/>
 	</path>
 
@@ -41,6 +45,8 @@
 		<pathelement location="${beanshell}" />
 		<pathelement location="${swingx}" />
 		<pathelement location="${MMCoreJ}" />
+		<pathelement location="${swing_layout}" />
+		<pathelement location="${commons_math}" />
 		<pathelement location="${MMPluginDir}/MMJ_.jar"/>
 	</path>
 
@@ -75,6 +81,8 @@
 		<copy file="${beanshell}" todir="${MMPluginDir}" />
 		<copy file="${swingx}" todir="${MMPluginDir}" />
 		<copy file="${MMCoreJ}" todir="${MMPluginDir}" />
+		<copy file="${swing_layout}" todir="${MMPluginDir}" />
+		<copy file="${commons_math}" todir="${MMPluginDir}" />		
 	</target>
 
 	<target name="buildMMReader" description="Build MMReader_.jar">
@@ -98,11 +106,12 @@
 		<copy file="MMJ_.jar" todir="${BinRoot}/plugins/Micro-Manager" />
 		<copy file="${beanshell}" todir="${MMPluginDir-inst}" />
 		<copy file="${swingx}" todir="${MMPluginDir-inst}" />
-		<copy file="${MMCoreJ}" todir="${MMPluginDir-inst}" />
+		<copy file="${MMCoreJ}" todir="${MMPluginDir-inst}" />		
+		<copy file="${swing_layout}" todir="${MMPluginDir-inst}" />
+		<copy file="${commons_math}" todir="${MMPluginDir-inst}" />
 		<copy file="${BinRoot}/MMCoreJ_wrap.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/MMConfig_demo.cfg" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/MMConfig_demoRGB.cfg" todir="${InstallRoot}" />
-
 		<copy file="${BinRoot}/mmgr_dal_ABSCamera.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_AOTF.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Apogee.dll" todir="${InstallRoot}" />
@@ -112,6 +121,7 @@
 		<copy file="${BinRoot}/mmgr_dal_ASIFW1000.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ASIStage.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ASIwptr.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/mmgr_dal_BaumerOptronic.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_CoherentCube.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Conix.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_CSUX.dll" todir="${InstallRoot}" />
@@ -127,7 +137,8 @@
 		<copy file="${BinRoot}/mmgr_dal_LeicaDMI.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_LeicaDMR.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Ludl.dll" todir="${InstallRoot}" />
-		<copy file="${BinRoot}/mmgr_dal_MCL_MicroDrive.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/mmgr_dal_Marzhauser.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_MCL_MicroDrive.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_MCL_NanoDrive.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Neos.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Nikon.dll" todir="${InstallRoot}" />
@@ -142,8 +153,9 @@
 		<copy file="${BinRoot}/mmgr_dal_PI.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Piper.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_PrecisExcite.dll" todir="${InstallRoot}" />
-		<copy file="${BinRoot}/mmgr_dal_Prior.dll" todir="${InstallRoot}" />	
-		<copy file="${BinRoot}/mmgr_dal_PVCAM.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/mmgr_dal_Prior.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_ProgRes.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_PVCAM.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_QCam.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ScionCam.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Sensicam.dll" todir="${InstallRoot}" />
@@ -153,47 +165,55 @@
 		<copy file="${BinRoot}/mmgr_dal_SpotCamera.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_SutterLambda.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ThorlabsFilterWheel.dll" todir="${InstallRoot}" />
-    	<copy file="${BinRoot}/mmgr_dal_ThorlabsSC10.dll" todir="${InstallRoot}" />
-    	<copy file="${BinRoot}/mmgr_dal_TwainCamera.dll" todir="${InstallRoot}" />
-    	<copy file="${BinRoot}/mmgr_dal_USBManager.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_ThorlabsSC10.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_TwainCamera.dll" todir="${InstallRoot}" />
+    <copy file="${BinRoot}/mmgr_dal_USBManager.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Utilities.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Vincent.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_Yokogawa.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ZeissCAN.dll" todir="${InstallRoot}" />
 		<copy file="${BinRoot}/mmgr_dal_ZeissCAN29.dll" todir="${InstallRoot}" />
-		
-	
 
-      <copy file="${ScriptsRoot}/sdemo1.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/sdemo2.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/setZoom.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/camera_test.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/image_snap_example.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/image_snap_example_2.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/live_demo.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/manualAcq.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/Init.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/config_test.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/AutoExpose.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/slm_demo.bsh" todir="${ScriptsInstall}" /> 
-      <copy file="${ScriptsRoot}/mm_beanshell_startup.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_load_docs.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_inspector.bsh" todir="${ScriptsInstall}" />     
-      <copy file="${ScriptsRoot}/mm_test_all.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_test_camera.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_test_properties.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_test_shutter.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_test_xystage.bsh" todir="${ScriptsInstall}" />
-      <copy file="${ScriptsRoot}/mm_test_zstage.bsh" todir="${ScriptsInstall}" />
-      <copy file="${DriversRoot}/K8055_libusb.inf" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/K8055_libusb.cat" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/K8061_libusb.inf" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/K8061_libusb.cat" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/NikonAZ100.inf" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/NikonAZ100.cat" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/libusb0.dll" todir="${DriversInstall}" />
-      <copy file="${DriversRoot}/libusb0.dll" todir="${InstallRoot}" />
-      <copy file="${DriversRoot}/libusb0.sys" todir="${DriversInstall}" />
+		<!-- Jenoptik vendor libraries (not installed with product) -->
+		<copy file="${BinRoot}/camconj.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/FireCamJ.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/MexJCam.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/ProcessLib.dll" todir="${InstallRoot}" />
+
+		<!-- Baumer Optronic vendor libraries  (not installed with product) -->
+		<copy file="${BinRoot}/FxLib.dll" todir="${InstallRoot}" />
+		<copy file="${BinRoot}/SysInfo.dll" todir="${InstallRoot}" />
+
+    <copy file="${ScriptsRoot}/sdemo1.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/sdemo2.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/setZoom.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/camera_test.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/image_snap_example.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/image_snap_example_2.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/live_demo.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/manualAcq.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/Init.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/config_test.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/AutoExpose.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/slm_demo.bsh" todir="${ScriptsInstall}" /> 
+    <copy file="${ScriptsRoot}/mm_beanshell_startup.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_load_docs.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_inspector.bsh" todir="${ScriptsInstall}" />     
+    <copy file="${ScriptsRoot}/mm_test_all.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_test_camera.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_test_properties.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_test_shutter.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_test_xystage.bsh" todir="${ScriptsInstall}" />
+    <copy file="${ScriptsRoot}/mm_test_zstage.bsh" todir="${ScriptsInstall}" />
+    <copy file="${DriversRoot}/K8055_libusb.inf" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/K8055_libusb.cat" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/K8061_libusb.inf" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/K8061_libusb.cat" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/NikonAZ100.inf" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/NikonAZ100.cat" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/libusb0.dll" todir="${DriversInstall}" />
+    <copy file="${DriversRoot}/libusb0.dll" todir="${InstallRoot}" />
+    <copy file="${DriversRoot}/libusb0.sys" todir="${DriversInstall}" />
 
 	</target>
 
