--- a/configure.in
+++ b/configure.in
@@ -13,6 +13,112 @@ AC_PROG_LIBTOOL
 
 m4_include([configure.common])
 
+AM_CONDITIONAL(BUILD_WITH_JAVA, test "$IMAGEJDIR" != "no")
+if test "$IMAGEJDIR" != "no" ; then
+   #----------------------------------------------------------------
+   # Find ij.jar in directory
+   #----------------------------------------------------------------
+   AC_MSG_CHECKING(for ij.jar in ImageJ directory)
+   IJJARDIR="ij.jar ImageJ.app/Contents/Resources/Java/ij.jar ../java/ij.jar"
+   for d in $IJJARDIR ; do
+      if test -r "$IJPATH/$d" ; then
+         IJJARPATH="$IJPATH/$d"
+         AC_MSG_RESULT($IJJARPATH)
+         break
+      fi
+   done
+   if test -z "$IJJARPATH"; then
+     AC_MSG_ERROR([not found, Use the without-imagej directive to build without ImageJ or install ImageJ (http://rsb.info.nih.gov/ij/ and rerun configure, possibly using the --with-imagej=path directive])
+   fi
+
+   #----------------------------------------------------------------
+   # Find beanshell.jar in ImageJ plugins directory
+   #----------------------------------------------------------------
+   AC_MSG_CHECKING(for beanshell jar file in ImageJ plugins directory)
+   if test -r "$IJPATH/plugins/bsh-2.0b4.jar" ; then
+      BSHJARPATH="$IJPATH/plugins/bsh-2.0b4.jar"
+      AC_MSG_RESULT($BSHJARPATH)
+   fi
+   if test -r "/usr/share/java/bsh.jar" ; then
+      BSHJARPATH="/usr/share/java/bsh.jar"
+      AC_MSG_RESULT($BSHJARPATH)
+   fi
+   if test "$BSHJARPATH" = "" ; then
+      AC_MSG_ERROR([not found, Use the without-imagej directive to build without ImageJ GUI, or download Beanshell (http://www.beanshell.org/download.html) and copy bsh-2.0b4.jar to $IJPATH/plugins])
+   fi
+
+   #----------------------------------------------------------------
+   # Find swingx.jar in ImageJ plugins directory
+   #----------------------------------------------------------------
+   AC_MSG_CHECKING(for swingx jar file in ImageJ plugins directory)
+   if test -r "$IJPATH/plugins/swingx-0.9.5.jar" ; then
+      SWINGXJARPATH="$IJPATH/plugins/swingx-0.9.5.jar"
+      AC_MSG_RESULT($SWINGXJARPATH)
+   fi
+   if test -r "/usr/share/java/swingx.jar" ; then
+      SWINGXJARPATH="/usr/share/java/swingx.jar"
+      AC_MSG_RESULT($SWINGXJARPATH)
+   fi
+   if test "$SWINGXJARPATH" = "" ; then
+      AC_MSG_ERROR([not found, Use the without-imagej directive to build without ImageJ GUI, or download swingx and copy to $IJPATH/plugins])
+   fi
+   
+   #----------------------------------------------------------------
+   # Set the CLASSEXT location
+   #----------------------------------------------------------------
+   CLASSEXT=$PWD"/classext"
+   echo "CLASSEXT="$CLASSEXT
+
+   #----------------------------------------------------------------
+   # Find commons-math-2.0.jar in ImageJ plugins directory
+   #----------------------------------------------------------------
+
+   AC_MSG_CHECKING(for apache commons math jar file)
+   if test -r "$IJPATH/plugins/commons-math-2.0.jar" ; then
+      COMMONSMATHJARPATH="$IJPATH/plugins/commons-math-2.0.jar"
+      AC_MSG_RESULT($COMMONSMATHJARPATH)
+   fi
+   if test -r "/usr/share/java/commons-math-2.0.jar" ; then
+      COMMONSMATHJARPATH="/usr/share/java/commons-math-2.0.jar"
+      AC_MSG_RESULT($COMMONSMATHJARPATH)
+   fi
+   if test -r $CLASSEXT"/commons-math-2.0.jar" ; then
+      COMMONSMATHJARPATH=$CLASSEXT"/commons-math-2.0.jar"
+      AC_MSG_RESULT($COMMONSMATHJARPATH)
+   fi
+   if test "$COMMONSMATHJARPATH" = "" ; then
+      AC_MSG_ERROR([commons-math-2.0.jar not found. It should be in the classext directory.])
+   fi
+
+   #----------------------------------------------------------------
+   # Find swing-layout-1.0.4.jar in ImageJ plugins directory
+   #----------------------------------------------------------------
+   AC_MSG_CHECKING(for swing-layout jar file)
+   if test -r "$IJPATH/plugins/swing-layout-1.0.4.jar" ; then
+      SWINGLAYOUTJARPATH="$IJPATH/plugins/swing-layout-1.0.4.jar"
+      AC_MSG_RESULT($SWINGLAYOUTJARPATH)
+   fi
+   if test -r "/usr/share/java/swing-layout-1.0.4.jar" ; then
+      SWINGLAYOUTJARPATH="/usr/share/java/swing-layout-1.0.4.jar"
+      AC_MSG_RESULT($SWINGLAYOUTJARPATH)
+   fi
+   if test -r $CLASSEXT"/swing-layout-1.0.4.jar" ; then
+      SWINGLAYOUTJARPATH=$CLASSEXT"/swing-layout-1.0.4.jar"
+      AC_MSG_RESULT($SWINGLAYOUTJARPATH)
+   fi
+   if test "$SWINGLAYOUTJARPATH" = "" ; then
+      AC_MSG_ERROR([swing-layout-1.0.4.jar not found.  It should be in the classext directory.])
+   fi
+fi
+
+
+AC_SUBST(CLASSEXT)
+AC_SUBST(BSHJARPATH)
+AC_SUBST(SWINGXJARPATH)
+AC_SUBST(COMMONSMATHJARPATH)
+AC_SUBST(SWINGLAYOUTJARPATH)
+AC_SUBST(IJJARPATH)
+
 AC_MSG_CHECKING([whether to build the core])
 AC_ARG_WITH([core], [AS_HELP_STRING([--with-core],[use --without-core to only build DeviceAdapters])], [], [with_core=yes])
 if test "x$with_core" = xno; then
