--- a/plugins/Surveyor/.classpath
+++ b/plugins/Surveyor/.classpath
@@ -7,5 +7,9 @@
 	<classpathentry kind="lib" path="/projects/micromanager1.3/classext/swingx-0.9.5.jar"/>
 	<classpathentry kind="lib" path="/projects/micromanager1.3/MMCoreJ_wrap/MMCoreJ.jar"/>
 	<classpathentry kind="lib" path="/projects/micromanager1.3/mmstudio/MMJ_.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/micro-manager1.4"/>
+	<classpathentry kind="lib" path="C:/projects/micromanager2/classext/swing-layout-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/projects/micromanager2/classext/commons-math-2.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PixelCalibrator"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
