--- a/IDE_projects/NetBeansProjects/mm/nbproject/project.properties
+++ b/IDE_projects/NetBeansProjects/mm/nbproject/project.properties
@@ -1,4 +1,5 @@
 application.title=mm
+application.vendor=arthur
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,13 +26,14 @@ file.reference.commons-math-2.0.jar=../../../classext/commons-math-2.0.jar
 file.reference.ij.jar=../../../classext/ij.jar
 file.reference.MMCoreJ.jar=../../../MMCoreJ_wrap/MMCoreJ.jar
 file.reference.mmstudio-src=../../../mmstudio/src
+file.reference.Projector-src=../../../plugins/Projector/src
 file.reference.swing-layout-1.0.4.jar=../../../classext/swing-layout-1.0.4.jar
 file.reference.swingx-0.9.5.jar=../../../classext/swingx-0.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.MMCoreJ.jar}:\
     ${file.reference.bsh-2.0b4.jar}:\
+    ${file.reference.MMCoreJ.jar}:\
     ${file.reference.commons-math-2.0.jar}:\
     ${file.reference.ij.jar}:\
     ${file.reference.swing-layout-1.0.4.jar}:\
@@ -57,14 +59,17 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=ij.ImageJ
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Xmx1200M
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=${file.reference.mmstudio-src}
+src.src.dir=${file.reference.Projector-src}
