add linux install lines
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4374 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/NativeGUI/Makefile.am
+++ b/NativeGUI/Makefile.am
@@ -27,6 +27,8 @@ install:
   ifeq ($(OSNAME),Darwin)
 	cp NativeGUI.jar $(DESTDIR)$(JARPATH)
 	cp libNativeGUI.jnilib $(DESTDIR)$(DEVICEADAPTERPATH)
+  else
+	cp NativeGUI.jar $(DESTDIR)$(JARPATH)
   endif
 
 clean:
