Enable build scripts and Makefile to generate universal binaries for NativeGUI
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4377 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/NativeGUI/Makefile.am
+++ b/NativeGUI/Makefile.am
@@ -11,7 +11,7 @@ NativeGUITARGETS = \
 $(NativeGUITARGETS): $(NativeGUISOURCES)
   ifeq ($(OSNAME),Darwin)
 	$(SWIG) -c++ -java -module NativeGUI -package org.micromanager.nativegui -outdir . NativeGUI.i
-	g++ -dynamiclib NativeGUIMac.mm NativeGUI_wrap.cxx -o libNativeGUI.jnilib $(JAVAINC) NativeGUI.h -framework Cocoa
+	$(CXX) $(CXXFLAGS) -dynamiclib NativeGUIMac.mm NativeGUI_wrap.cxx -o libNativeGUI.jnilib $(JAVAINC) NativeGUI.h -framework Cocoa
 	$(JAVAC) NativeGUI.java NativeGUIJNI.java -d .
 	$(JAR) cf NativeGUI.jar org
   else
