Fxed Makefile so that make clean works even when targets have not been made yet
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4389 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/NativeGUI/Makefile.am
+++ b/NativeGUI/Makefile.am
@@ -32,11 +32,11 @@ install:
   endif
 
 clean:
-	rm org/micromanager/nativegui/*.class
-	rm NativeGUI.java
-	rm NativeGUIJNI.java
-	rm *.cxx
-	rm libNativeGUI.jnilib
-	rm NativeGUI.jar
+	rm org/micromanager/nativegui/*.class || echo "OK"
+	rm NativeGUI.java || echo "OK"
+	rm NativeGUIJNI.java || echo "OK"
+	rm *.cxx || echo "OK"
+	rm libNativeGUI.jnilib || echo "OK"
+	rm NativeGUI.jar || echo "OK"
 
 
