--- a/plugins/SlideExplorer/build.xml
+++ b/plugins/SlideExplorer/build.xml
@@ -1,7 +1,7 @@
-<!-- Ant makefile for the Micro-Manager Surveyor plugin  -->
+<!-- Ant makefile for the Micro-Manager SlideExplorer plugin  -->
 <!-- This file assumes Micro-Manager project tree structure -->
 
-<project name="MMSurveyor" default="buildMMSurveyor">
+<project name="MMSlideExplorer" default="buildMMSlideExplorer">
 
 	<!-- Specify the system path to the ImageJ root directory -->
 	<property name="InstallRoot" value="../../Install/micro-manager"/>
@@ -36,7 +36,7 @@
 
 	</path>
 
-	<target name="compileMMSurveyor" description="Compile Surveyor plugin.">
+	<target name="compileMMSlideExplorer" description="Compile SlideExplorer plugin.">
 		<mkdir dir="build" />
 		<javac srcdir="./src" destdir="./build" optimize="on" source="1.5" target="1.5" debug="on">
 			<classpath refid="project.class.path" />
@@ -46,14 +46,14 @@
 		</copy>
 	</target>
 
-	<target name="buildMMSurveyor" description="Build Surveyor.jar">
-		<jar jarfile="Surveyor.jar" basedir="build" />
-		<copy file="Surveyor.jar" todir="${MMPluginsDir-inst}" />
+	<target name="buildMMSlideExplorer" description="Build SlideExplorer.jar">
+		<jar jarfile="SlideExplorer.jar" basedir="build" />
+		<copy file="SlideExplorer.jar" todir="${MMPluginsDir-inst}" />
 	</target>
 	
-	<target name="cleanMMSurveyor" description="Delete the Surveyor build files.">
+	<target name="cleanMMSlideExplorer" description="Delete the SlideExplorer build files.">
 		<delete dir="build" />
-		<delete file="Surveyor.jar" />
+		<delete file="SlideExplorer.jar" />
 	</target>
 	
 </project>
