Made build of Test Programs work on Unix
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4542 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/ModuleTest/Makefile.am
+++ b/Test_Programs/ModuleTest/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = mm_moduletest
-mm_moduletest_SOURCES = ModuleTest.cpp ../MMCore/PluginManager.cpp
-mm_moduletest_LDADD = ../MMCore/libMMCore.a $(LIBACE) $(LPTHREAD)
+mm_moduletest_SOURCES = ModuleTest.cpp ../../MMCore/PluginManager.cpp
+mm_moduletest_LDADD = ../../MMCore/libMMCore.a $(LPTHREAD)
 
 EXTRA_DIST = ModuleTest.vcproj ModuleTest.sln
