Made build of Test Programs work on Unix
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4543 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ MMJAVACODE = MMCoreJ_wrap NativeGUI mmstudio autofocus plugins scripts classext
 endif
 
 if BUILD_APP
-APP = MMCore $(MMJAVACODE)
+APP = MMCore $(MMJAVACODE) Test_Programs
 endif
 
 if BUILD_PYTHON
