Fix build issue
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4567 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/Test_MMCore/Makefile.am
+++ b/Test_Programs/Test_MMCore/Makefile.am
@@ -5,6 +5,7 @@ mm_testCore_LDADD = ../../MMCore/libMMCore.a ../../MMDevice/.libs/libMMDevice.a 
 
 EXTRA_DIST = Test_MMCore.vcproj Test_MMCore.sln Test_MMCore.cpp
 
-#install:
+install:
+	echo "Nothing to do"
 #	cp mm_testCore $(IJPATH)/mm_testCore
 
