--- a/Test_Programs/ModuleTest/Makefile.am
+++ b/Test_Programs/ModuleTest/Makefile.am
@@ -2,4 +2,7 @@ bin_PROGRAMS = mm_moduletest
 mm_moduletest_SOURCES = ModuleTest.cpp ../../MMCore/PluginManager.cpp
 mm_moduletest_LDADD = ../../MMCore/libMMCore.a $(LPTHREAD)
 
+install:
+	echo "Nothing to do"
+
 EXTRA_DIST = ModuleTest.vcproj ModuleTest.sln
