Added boost stuff to automake stuff to make test programs build
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4572 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/configure.in
+++ b/Test_Programs/configure.in
@@ -10,6 +10,8 @@ AC_PROG_LIBTOOL
 
 m4_include([../configure.common])
 
+AX_BOOST_BASE
+AX_BOOST_DATE_TIME
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
