--- a/Makefile.am
+++ b/Makefile.am
@@ -13,9 +13,13 @@ if BUILD_PYTHON
 PYTHONDIR = MMCorePy_wrap
 endif
 
+if BUILD_SECRETDEVICEADAPTERS
+SECRETDEVICEADAPTERS = SecretDeviceAdapters
+endif
+
 EXTRA_DIST = mmbuild.bat lib/empty.txt build_instructions_win.html build_instructions_unix.txt
 
-SUBDIRS =  MMDevice $(APP) DeviceAdapters $(PYTHONDIR) 
+SUBDIRS =  MMDevice $(APP) DeviceAdapters $(SECRETDEVICEADAPTERS) $(PYTHONDIR) 
 
 
 doxygen:
