--- a/Test_Programs/Test_MMCore/Makefile.am
+++ b/Test_Programs/Test_MMCore/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 bin_PROGRAMS = mm_testCore
 mm_testCore_SOURCES = Test_MMCore_Mac.cpp 
-mm_testCore_LDADD = ../../MMCore/libMMCore.a ../../MMDevice/.libs/libMMDevice.a $(LPTHREAD) -ldl $(BOOST_LDFLAGS) $(BOOST_DATE_TIME_LIB) /usr/local/lib/libtiff.a
+mm_testCore_LDADD = ../../MMCore/libMMCore.a ../../MMDevice/.libs/libMMDevice.a $(LPTHREAD) -ldl $(BOOST_LDFLAGS) $(BOOST_DATE_TIME_LIB) -ltiff 
 
 EXTRA_DIST = Test_MMCore.vcproj Test_MMCore.sln Test_MMCore.cpp
 
