--- a/configure.in
+++ b/configure.in
@@ -153,6 +153,35 @@ else
    fi                                                            
    AC_SUBST(LIBTIFF)                                              
 
+   AC_MSG_CHECKING(for zlib)
+
+   AC_FIND_FILE([zlib.h], [/usr/include /usr/local/$ARCH/include], ZLIBINCDIR)
+
+   if test x$ZLIBINCDIR = xNO; then 
+      AC_MSG_RESULT([not found])                                 
+      exit 1
+   else                                                          
+      AC_CHECK_HEADERS([$ZLIBINCDIR/zlib.h])                       
+      if test -z "$LIBZLIB" ; then
+         AC_FIND_FILE([zlib.a], [/usr/lib /usr/lib64 /usr/local/$ARCH/lib], ZLIBLIBDIR)
+         if test x$ZLIBLIBDIR = xNO; then
+            AC_MSG_RESULT([zlib not found])                       
+            exit 1
+         else                                                    
+            AC_MSG_RESULT([zlib.a found])                      
+            LIBZLIB="$ZLIBLIBDIR/zlib.a"                         
+         fi                                                      
+      fi                                                         
+   fi                                                            
+   AC_SUBST(LIBZLIB)                                              
+
+
+
+
+
+
+
+
    # Check for Swig.
    AC_CHECK_PROGS(SWIG, swig)
    if test "$SWIG" = "" ; then
