Build on Mac works again after fixing zlib incorporation.  Fixed some compiler warnings
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4776 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/configure.in
+++ b/Test_Programs/configure.in
@@ -45,4 +45,27 @@ else
 fi
 AC_SUBST(LIBTIFF)
 
+#---------------------------------------------------
+# Check for ZLIB
+#---------------------------------------------------
+AC_MSG_CHECKING(for zlib)
+AC_FIND_FILE([zlib.h], [/usr/local/$ARCH/include /usr/include], ZLIBINCDIR)
+if test x$ZLIBINCDIR = xNO; then
+   AC_MSG_RESULT([not found]) 
+   exit 1
+else 
+   AC_CHECK_HEADERS([$ZLIBINCDIR/zlib.h])
+   if test -z "$LIBZLIB" ; then
+      AC_FIND_FILE([libz.a], [/usr/local/$ARCH/lib /usr/lib /usr/lib64], ZLIBLIBDIR)
+      if test x$ZLIBLIBDIR = xNO; then
+         AC_MSG_RESULT([zlib not found])
+         exit 
+      else
+         AC_MSG_RESULT([zlib.a found])
+         LIBZLIB="$ZLIBLIBDIR/libz.a"
+      fi 
+   fi 
+fi 
+AC_SUBST(LIBZLIB) 
+
 AC_OUTPUT
