Further fixes to zlib configure scripts
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4783 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/Test_Programs/configure.in
+++ b/Test_Programs/configure.in
@@ -59,7 +59,7 @@ else
       AC_FIND_FILE([libz.a], [/usr/local/$ARCH/lib /usr/lib /usr/lib64], ZLIBLIBDIR)
       if test x$ZLIBLIBDIR = xNO; then
          AC_MSG_RESULT([zlib not found])
-         exit 
+         exit 1
       else
          AC_MSG_RESULT([zlib.a found])
          LIBZLIB="$ZLIBLIBDIR/libz.a"
