point to original MMJ_.jar rather than the extra copy
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4812 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/SlideExplorer/build.xml
+++ b/plugins/SlideExplorer/build.xml
@@ -7,7 +7,7 @@
 	<property name="InstallRoot" value="../../Install_win32/micro-manager"/>
 
 	<!-- Do not modify from this point on -->
-	<property name="MMPluginDir" value="../../bin_Win32/plugins/Micro-Manager"/>
+	<property name="MMPluginDir" value="../../mmstudio"/>
 	<property name="MMCoreJ" value="../../bin_Win32/MMCoreJ.jar"/>
 	<property name="MMPluginsDir-inst" value="${InstallRoot}/mmplugins"/>
 	<property name="BinRoot" value="../../bin_Win32"/>
