--- a/NativeGUI/build.xml
+++ b/NativeGUI/build.xml
@@ -10,7 +10,7 @@
 
 	<!-- Do not modify from this point on -->
 	<property name="MMPluginDir" value="${ImageJPath}/plugins/Micro-Manager"/>
-	<property name="IJ" value="../classext/ij.jar"/>
+	<property name="IJ" value="../../3rdpartypublic/classext/ij.jar"/>
 	<property name="BinRoot" value="../bin"/>
 
 	<target name="buildNativeGUI" description="Compile NativeGUI.">
