Properly store window position when user selects Quit on Mac.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4921 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/NativeGUI/Makefile.am
+++ b/NativeGUI/Makefile.am
@@ -2,7 +2,9 @@ NativeGUISOURCES = \
 	NativeGUI.h \
 	NativeGUIMac.mm \
 	NativeGUI.i \
-	NativeGUIstub.java
+	NativeGUIstub.java \
+	QuitHandlerMac.java \
+	QuitHandlerStub.java
 
 NativeGUITARGETS = \
 	NativeGUI.jar \
@@ -12,11 +14,13 @@ $(NativeGUITARGETS): $(NativeGUISOURCES)
   ifeq ($(OSNAME),Darwin)
 	$(SWIG) -c++ -java -module NativeGUI -package org.micromanager.nativegui -outdir . NativeGUI.i
 	$(CXX) $(CXXFLAGS) -dynamiclib NativeGUIMac.mm NativeGUI_wrap.cxx -o libNativeGUI.jnilib $(JAVAINC) NativeGUI.h -framework Cocoa
-	$(JAVAC) NativeGUI.java NativeGUIJNI.java -d .
+	cp QuitHandlerMac.java QuitHandler.java
+	$(JAVAC) NativeGUI.java NativeGUIJNI.java QuitHandler.java -d .
 	$(JAR) cf NativeGUI.jar org
   else
 	cp NativeGUIstub.java NativeGUI.java
-	$(JAVAC) NativeGUI.java -d .
+	cp QuitHandlerStub.java QuitHandler.java
+	$(JAVAC) NativeGUI.java QuitHandler.java -d .
 	$(JAR) cf NativeGUI.jar org
   endif
 
@@ -35,8 +39,9 @@ clean:
 	rm org/micromanager/nativegui/*.class || echo "OK"
 	rm NativeGUI.java || echo "OK"
 	rm NativeGUIJNI.java || echo "OK"
+	rm QuitHandler.java || echo "OK"
 	rm *.cxx || echo "OK"
 	rm libNativeGUI.jnilib || echo "OK"
 	rm NativeGUI.jar || echo "OK"
-
+	
 
